# substreams

./: .gitignore  Cargo.toml  PUBLISH.md  README.md  build.rs  substreams.yaml  test.sh
common/: Cargo.toml
common/src/: lib.rs
dexes/pancakeswap-v3-forks/: Cargo.toml  README.md  substreams.yaml
dexes/pancakeswap-v3-forks/src/: lib.rs
dexes/quickswap-v3/: Cargo.toml  README.md  substreams.yaml  test.sh
dexes/quickswap-v3/src/: lib.rs
dexes/uniswap-v2-forks/: Cargo.toml  README.md  substreams.yaml  test.sh
dexes/uniswap-v2-forks/src/: lib.rs
dexes/uniswap-v2-forks/src/pb/: mod.rs
dexes/uniswap-v3/: .gitignore  Cargo.toml  README.md  buf.gen.yaml  build.rs  perf_monitor.sh  perf_monitor_jq.sh  perf_test.sh  publish.md  substreams.yaml  test.sh  verify_rolling.sh
dexes/uniswap-v3-forks/: Cargo.toml  README.md  build.rs  substreams.yaml  test.sh
dexes/uniswap-v3-forks/src/: lib.rs
dexes/uniswap-v3/proto/: output.proto
dexes/uniswap-v3/src/: constants.rs  lib.rs  utils.rs
dexes/uniswap-v3/src/mappers/: mod.rs  ticker_output.rs
dexes/uniswap-v3/src/pb/: mod.rs
dexes/uniswap-v3/src/stores/: mod.rs  period_volumes.rs  rolling_deltas.rs
dexes/universal-dex/: Cargo.toml  substreams.yaml
dexes/universal-dex/src/: common.rs  lib.rs  v2.rs  v3.rs
proto/: README.md  dex_common.proto
