[workspace]
members = [
    "common",
    "dexes/universal-dex",
    "dexes/uniswap-v2-forks",
    "dexes/uniswap-v3-forks",
    "dexes/pancakeswap-v3-forks",
]
resolver = "2"

[workspace.dependencies]
substreams = "0.5"
substreams-ethereum = "0.9"
prost = "0.11"
prost-types = "0.11"
prost-build = "0.11"