[package]
name = "coinranking-uniswap-v3"
version = "0.1.0"
edition = "2021"

[lib]
name = "coinranking_uniswap_v3"
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
substreams-ethereum = { workspace = true }
prost-build = { workspace = true }