[package]
name = "coinranking_universal_dex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dex-common = { path = "../../common" }
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
hex-literal = "0.4"
hex = "0.4"

[build-dependencies]
prost-build = { workspace = true }